@@ -2,8 +2,6 @@ package org.example.bookapp.service;
 
 import jakarta.persistence.EntityNotFoundException;
 import java.util.List;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.example.bookapp.dto.BookDto;
 import org.example.bookapp.dto.CreateBookRequestDto;
@@ -26,9 +24,9 @@ public class BookServiceImpl implements BookService {
 
     @Override
     public List<BookDto> findAll() {
-        return (List<BookDto>) bookRepository.findAll().stream()
-                .map((Function<Book, BookDto>) bookMapper::toDto)
-                .collect(Collectors.toList());
+        return bookRepository.findAll().stream()
+                .map(bookMapper::toDto)
+                .toList();
 
     }
 
@@ -47,19 +45,12 @@ public class BookServiceImpl implements BookService {
     }
 
     @Override
-    public BookDto updateBookById(Long id, BookDto bookDto) {
-        Book book = bookRepository.findById(id).orElseThrow(
-                () -> new EntityNotFoundException("Can't get book with id: "
-                        + id)
+    public BookDto updateBookById(Long id, CreateBookRequestDto bookDto) {
+        Book bookFromDb = bookRepository.findById(id).orElseThrow(
+                () -> new EntityNotFoundException("Can't get book with id: " + id)
         );
-        book.setAuthor(bookDto.getAuthor());
-        book.setIsbn(bookDto.getIsbn());
-        book.setTitle(bookDto.getTitle());
-        book.setPrice(bookDto.getPrice());
-        book.setCoverImage(bookDto.getCoverImage());
-        book.setDescription(bookDto.getDescription());
-
-        Book updatedBook = bookRepository.save(book);
+        bookMapper.updateBookFromDto(bookDto, bookFromDb);
+        Book updatedBook = bookRepository.save(bookFromDb);
         return bookMapper.toDto(updatedBook);
     }
 }
